update vision demo  and refactor camera target handling